--- a/style.css
+++ b/style.css
@@ -26,17 +26,20 @@ and open the template in the editor.
     z-index: 7;
 }
 #gameContainer #open-hand {
-    bottom: 10%;
+    bottom: 2%;
     left: 31%;
     position: absolute;
-    width: 51%;
+    width: 48%;
     z-index: 7;
 }
 #gameContainer .stick{
     top: 15%;
     left: 50%;
+    height: 70%;
     position: absolute;
-    width: 5%;
+    width: 2.5%;
+    margin-left: 1%;
+    margin-top: 1%;
     z-index: 6;
 }
 #gameContainer .screen{
@@ -54,15 +57,17 @@ and open the template in the editor.
     border: 1px solid black;
 }
 #gameContainer .stick:hover, #gameContainer .stick.selected{
-    width: 6%;
+    width: 3.5%;
     cursor: pointer;
+    margin-left: 0.5%;
+    margin-top: 0%;
     opacity: 0.8;
 }
 #gameContainer .stick.selected:hover{
     cursor: default;
 }
 #gameContainer .stick.no-selected:hover{
-    width: 5%;
+    width: 2.5%;
     cursor: default;
     opacity:1;
 }
