--- a/style.css
+++ b/style.css
@@ -14,9 +14,32 @@ and open the template in the editor.
 #gameContainer{
     border-radius:8px;overflow:hidden;z-index:10;margin: 50px auto; position: relative; width: 90%; height: 90%; border: 1px solid #000;
 }
+#gameContainer #main-menu{
+    color: #fff;
+}
+#gameContainer #main-menu button{
+    width: 250px;
+}
 #gameContainer button{
     cursor:pointer;border: 0 none;border-radius: 5px;font-size: 20px;height: 50px;width: 150px;
     margin-top: 20px;
+}
+#gameContainer .close-button{
+    background-color: #ff0000;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-weight: bold;
+    line-height: 15px;
+    padding: 4px 6px;
+    position: absolute;
+    right: 1%;
+    top: 1%;
+}
+/*Sticks game*/
+#gameContainer #sticks-game{
+    display:none;
 }
 #gameContainer #close-hand{
     bottom: 10%;
