--- a/style.css
+++ b/style.css
@@ -105,41 +105,12 @@ Author     : jbustarviejo
 }
 
 /*Flip effects*/
-#cards-game .flip-container {
-    -webkit-perspective: 800px;
-    -moz-perspective: 800px;
-    -o-perspective: 800px;
-    perspective: 800px;
-    position: absolute;
-    margin-top: 1%;
-}
-
-#cards-game .flip-container:hover .flipper, #cards-game .flip-container.hover .flipper {
-   -webkit-transform: rotateY(180deg);
-   -moz-transform: rotateY(180deg);
-   -o-transform: rotateY(180deg);
-   transform: rotateY(180deg);
-}
-
-#cards-game .flip-container, #cards-game .front, #cards-game .back {
+#cards-game .front, #cards-game .back {
     border-radius: 10px;
     cursor: pointer;
 }
 
-#cards-game .flipper {
- -webkit-transition: -webkit-transform 0.6s;
- -moz-transition: -moz-transform 0.6s;
- -o-transition: -o-transform 0.6s;
- transition: transform 0.6s;
- -webkit-transform-style: preserve-3d;
- -moz-transform-style: preserve-3d;
- -o-transform-style: preserve-3d;
- transform-style: preserve-3d;
- -webkit-transform-origin: 50% 50%;
- position: relative;
-}
-
-#cards-game .front,#cards-game  .back {
+#cards-game .front,#cards-game .back {
    -webkit-backface-visibility: hidden;
    -moz-backface-visibility: hidden;
    -o-backface-visibility: hidden;
@@ -149,28 +120,14 @@ Author     : jbustarviejo
    left: 0;
 }
 
-#cards-game .front {
-    z-index: 2;
-    /* for firefox 31 */
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-}
-
-#cards-game .back {
-   -webkit-transform: rotateY(180deg);
-   -moz-transform: rotateY(180deg);
-   -o-transform: rotateY(180deg);
-   transform: rotateY(180deg);
-}
-
 #cards-game .red-card{
     background-color: #d63232;
+    border: 2px solid #fff;
 }
 
 #cards-game .black-card{
     background-color: #222;
+    border: 2px solid #fff;
 }
 
 #cards-game .cards-play-button{
@@ -181,13 +138,79 @@ Author     : jbustarviejo
     width: 15%;
 }
 
+#gameContainer .card-container {
+  width: 18%;
+  height: 45%;
+  position: absolute;
+  -webkit-perspective: 800px;
+  -moz-perspective: 800px;
+  -o-perspective: 800px;
+  perspective: 800px;
+  float: left;
+  cursor: pointer;
+}
+#gameContainer .card {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -webkit-transition: -webkit-transform 0.6s;
+  -moz-transition: -moz-transform 0.6s;
+  -o-transition: -o-transform 0.6s;
+  transition: transform 0.6s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  -o-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transform-origin: 50% 50%;
+}
+#gameContainer .card div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  line-height: 150px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 140px;
+  position: absolute;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+#gameContainer .card .back {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+
+#gameContainer .card:hover {
+  -webkit-transform: rotateY(30deg);
+  -moz-transform: rotateY(30deg);
+  -o-transform: rotateY(30deg);
+  transform: rotateY(30deg);
+}
+#gameContainer .flipped{
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+#gameContainer .flipped:hover {
+  -webkit-transform: rotateY(150deg);
+  -moz-transform: rotateY(150deg);
+  -o-transform: rotateY(150deg);
+  transform: rotateY(150deg);
+}
+
 #cards-game .smaller{
-    -webkit-transition: -webkit-transform 2s;
-    -moz-transition: -moz-transform 2s;
-    -o-transition: -o-transform 2s;
-    transition: transform 2s;
+    -webkit-transition: 2s;
+    -moz-transition: 2s;
+    -o-transition: 2s;
+    transition: 2s;
     margin-top: 10%;
-    margin-left: 44% !important;
+    margin-left: 47% !important;
 }
 
 #cards-game #cards-hat {
@@ -197,19 +220,19 @@ Author     : jbustarviejo
     position: absolute;
     width: 25%;
     z-index: 3;
-    -webkit-transition: -webkit-transform 2.5s;
-    -moz-transition: -moz-transform 2.5s;
-    -o-transition: -o-transform 2.5s;
-    transition: transform 2.5s;
+    -webkit-transition: 2.5s;
+    -moz-transition: 2.5s;
+    -o-transition: 2.5s;
+    transition: 2.5s;
 }
 
 #cards-game #final-card {
     border-radius: 10px;
     display: none;
-    height: 15%;
+    height: 17%;
     margin-left: 47% !important;
     position: absolute;
-    width: 6.5%;
+    width: 7%;
 }
 
 #cards-game .card-to-choose{
@@ -221,10 +244,10 @@ Author     : jbustarviejo
     position: absolute;
     width: 19%;
     cursor: pointer;
-    -webkit-transition: -webkit-transform 1s;
-    -moz-transition: -moz-transform 1s;
-    -o-transition: -o-transform 1s;
-    transition: transform 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
     opacity: 0;
 }
 
