--- a/style.css
+++ b/style.css
@@ -191,6 +191,13 @@ Author     : jbustarviejo
   -o-transform: rotateY(30deg);
   transform: rotateY(30deg);
 }
+#gameContainer #final-card .card:hover {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  cursor: default;
+}
 #gameContainer .flipped{
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
