--- a/style.css
+++ b/style.css
@@ -5,28 +5,48 @@ Author     : jbustarviejo
 
 #body{
     width:100%; height: 100%; margin:0;
+    background: #fff url("/images/movistar/movistar-background-fake.png") repeat-x scroll left top;
+}
+header, footer{
+    text-align: center;
+}
+.movistar-image-fake{
+    width: 100%;
+    max-width: 980px;
+}
+.fake-container{
+    background-color: #fff;
+    margin: 0 auto;
+    max-width: 980px;
+    position: relative;
+    width: 100%;
+    padding-top: 1px;
+}
+.fake-title {
+    color: rgb(0, 50, 69);
+    margin-left: 20px;
 }
 #gameContainer{
-    border-radius:8px;overflow:hidden;z-index:10;margin: 50px auto; position: relative; width: 90%; height: 90%; border: 1px solid #000;
+    border-radius:8px;overflow:hidden;z-index:10;margin: 15px auto; position: relative; width: 90%; height: 90%; border: 1px solid #000;
 }
 #gameContainer #login-menu{
     z-index: 10;
     background-color:rgb(0, 50, 69);
 }
 #gameContainer #login-username{
-  margin-top: 8%;
+    margin-top: 8%;
 }
 #gameContainer #login-menu .h2-title{
-  color: white;
+    color: white;
 }
 #gameContainer .input-login{
-  width: 50%;
-  clear: both;
-  height: 40px;
-  border-radius: 10px;
-  border: 0 none;
-  padding: 5px 15px;
-  margin-bottom: 20px;
+    width: 50%;
+    clear: both;
+    height: 40px;
+    border-radius: 10px;
+    border: 0 none;
+    padding: 5px 15px;
+    margin-bottom: 20px;
 }
 #gameContainer #main-menu{
     color: #fff;
@@ -55,26 +75,39 @@ Author     : jbustarviejo
 #gameContainer #sticks-game{
     display:none;
 }
-#gameContainer #close-hand{
-    bottom: 10%;
-    left: 35%;
+#gameContainer .close-hand{
     position: absolute;
-    width: 30%;
+    width: 74%;
+    left:0;
+}
+#gameContainer #close-hand-front{
+    z-index: 7;
+    bottom: -12%;
+}
+#gameContainer #close-hand-back{
+    z-index: 5;
+    bottom: 0.9%;
+}
+#gameContainer .open-hand{
+    left: 0;
+    position: absolute;
+    width: 104%;
+}
+#gameContainer #open-hand-front {
+    bottom: -38%;;
+    width: 104%;
     z-index: 7;
 }
-#gameContainer #open-hand {
-    bottom: 2%;
-    left: 31%;
-    position: absolute;
-    width: 48%;
-    z-index: 7;
+#gameContainer #open-hand-back {
+    bottom: -9%;
+    z-index: 6;
 }
 #gameContainer .stick{
-    top: 15%;
+    top: 8%;
     left: 50%;
     height: 70%;
     position: absolute;
-    width: 2.5%;
+    width: 3%;
     margin-left: 1%;
     margin-top: 1%;
     z-index: 6;
@@ -86,16 +119,17 @@ Author     : jbustarviejo
     text-align: center;
 }
 #gameContainer #main-screen-game-sticks{
-  background-color: rgb(117, 117, 219);
-  z-index: 8;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/1/18/Sushi_bar_table.jpg");
+    background-size: 100%;
+    z-index: 8;
 }
 #gameContainer #main-screen-game-cards{
-  background-color: rgb(117, 117, 219);
-  z-index: 8;
+    background-color: rgb(117, 117, 219);
+    z-index: 8;
 }
 #gameContainer #main-screen-game-boxes{
-  background-color: rgb(117, 117, 219);
-  z-index: 8;
+    background-color: rgb(117, 117, 219);
+    z-index: 8;
 }
 
 #gameContainer #sticks-instructions-screen > div,#gameContainer #cards-instructions-screen > div,#gameContainer #boxes-instructions-screen > div{
@@ -143,13 +177,13 @@ Author     : jbustarviejo
 }
 
 #cards-game .front,#cards-game .back {
- -webkit-backface-visibility: hidden;
- -moz-backface-visibility: hidden;
- -o-backface-visibility: hidden;
- backface-visibility: hidden;
- position: absolute;
- top: 0;
- left: 0;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #cards-game .red-card{
@@ -171,84 +205,84 @@ Author     : jbustarviejo
 }
 
 #gameContainer .card-container {
-  width: 18%;
-  height: 45%;
-  position: absolute;
-  -webkit-perspective: 800px;
-  -moz-perspective: 800px;
-  -o-perspective: 800px;
-  perspective: 800px;
-  float: left;
-  cursor: pointer;
+    width: 18%;
+    height: 45%;
+    position: absolute;
+    -webkit-perspective: 800px;
+    -moz-perspective: 800px;
+    -o-perspective: 800px;
+    perspective: 800px;
+    float: left;
+    cursor: pointer;
 }
 #gameContainer .card {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  -webkit-transition: -webkit-transform 0.6s;
-  -moz-transition: -moz-transform 0.6s;
-  -o-transition: -o-transform 0.6s;
-  transition: transform 0.6s;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform-origin: 50% 50%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-transition: -webkit-transform 0.6s;
+    -moz-transition: -moz-transform 0.6s;
+    -o-transition: -o-transform 0.6s;
+    transition: transform 0.6s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform-origin: 50% 50%;
 }
 #gameContainer .card div {
-  display: block;
-  height: 100%;
-  width: 100%;
-  line-height: 150px;
-  color: white;
-  text-align: center;
-  font-weight: bold;
-  font-size: 140px;
-  position: absolute;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  backface-visibility: hidden;
+    display: block;
+    height: 100%;
+    width: 100%;
+    line-height: 150px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 140px;
+    position: absolute;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 #gameContainer .card .back {
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 #gameContainer .card:hover {
-  -webkit-transform: rotateY(30deg);
-  -moz-transform: rotateY(30deg);
-  -o-transform: rotateY(30deg);
-  transform: rotateY(30deg);
+    -webkit-transform: rotateY(30deg);
+    -moz-transform: rotateY(30deg);
+    -o-transform: rotateY(30deg);
+    transform: rotateY(30deg);
 }
 #gameContainer #final-card-front, #gameContainer #final-card-back{
     cursor: default;
 }
 #gameContainer .smaller .card:hover {
-  -webkit-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-  transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    transform: rotateY(0deg);
 }
 #gameContainer .smaller .card.flipped:hover {
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 #gameContainer .flipped{
-  -webkit-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-  transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 #gameContainer .flipped:hover {
-  -webkit-transform: rotateY(150deg);
-  -moz-transform: rotateY(150deg);
-  -o-transform: rotateY(150deg);
-  transform: rotateY(150deg);
+    -webkit-transform: rotateY(150deg);
+    -moz-transform: rotateY(150deg);
+    -o-transform: rotateY(150deg);
+    transform: rotateY(150deg);
 }
 
 #cards-game .smaller{
@@ -337,13 +371,13 @@ Author     : jbustarviejo
 }
 
 #boxes-game .choosen-box{
-   -webkit-transition: 1s;
-   -moz-transition: 1s;
-   -o-transition: 1s;
-   transition: 1s;
-   bottom: 2%;
-   left: 80% !important;
-   cursor: auto;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    bottom: 2%;
+    left: 80% !important;
+    cursor: auto;
 }
 
 #boxes-game .choosen-box:hover{
@@ -365,11 +399,11 @@ Author     : jbustarviejo
 }
 
 #boxes-game .box-to-hide{
-   -webkit-transition: 1s;
-   -moz-transition: 1s;
-   -o-transition: 1s;
-   transition: 1s;
-   opacity: 0;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s;
+    opacity: 0;
 }
 
 #boxes-game .box-to-change{
@@ -381,12 +415,12 @@ Author     : jbustarviejo
 }
 
 #boxes-game .box.box-to-change-finish{
-   -webkit-transition: none;
-   -moz-transition: none;
-   -o-transition: none;
-   transition: none;
-   cursor: pointer;
-   pointer-events: auto;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none;
+    cursor: pointer;
+    pointer-events: auto;
 }
 
 #boxes-game .box.box-unselectable.box-to-change-finish:hover{ 
