--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ Created on : 03-jul-2015, 18:13:47
 Author     : jbustarviejo
 */
 
+/*Estilos genéricos*/
+
 #body{
     width:100%; height: 100%; margin:0;
     background: #fff url("/images/movistar/movistar-background-fake.png") repeat-x scroll left top;
@@ -26,20 +28,30 @@ header, footer{
     color: rgb(0, 50, 69);
     margin-left: 20px;
 }
-#gameContainer{
-    border-radius:8px;overflow:hidden;z-index:10;margin: 15px auto; position: relative; width: 90%; height: 90%; border: 1px solid #000;
+
+/*Contenedor y estilos del menú principal de login*/
+
+#game-container{
+    border-radius:8px;
+    overflow:hidden;
+    z-index:10;
+    margin: 15px auto; 
+    position: relative; 
+    width: 90%; 
+    height: 90%; 
+    border: 1px solid #000;
 }
-#gameContainer #login-menu{
+#game-container #login-menu{
     z-index: 10;
     background-color:rgb(0, 50, 69);
 }
-#gameContainer #login-username{
+#game-container #login-username{
     margin-top: 8%;
 }
-#gameContainer #login-menu .h2-title{
+#game-container #login-menu .h2-title{
     color: white;
 }
-#gameContainer .input-login{
+#game-container .input-login{
     width: 50%;
     clear: both;
     height: 40px;
@@ -48,17 +60,22 @@ header, footer{
     padding: 5px 15px;
     margin-bottom: 20px;
 }
-#gameContainer #main-menu{
+#game-container #main-menu{
     color: #fff;
 }
-#gameContainer #main-menu button{
+#game-container #main-menu button{
     width: 250px;
 }
-#gameContainer button{
-    cursor:pointer;border: 0 none;border-radius: 5px;font-size: 20px;height: 50px;width: 150px;
+#game-container button{
+    cursor:pointer;
+    border: 0 none;
+    border-radius: 5px;
+    font-size: 20px;
+    height: 50px;
+    width: 150px;
     margin-top: 20px;
 }
-#gameContainer .close-button{
+#game-container .close-button{
     background-color: #ff0000;
     border-radius: 10px;
     color: #fff;
@@ -71,38 +88,46 @@ header, footer{
     right: 1%;
     top: 1%;
 }
-/*Sticks game*/
-#gameContainer #sticks-game{
+#game-container .screen{
+    width: 100%; 
+    height: 100%; 
+    position: absolute;
+    text-align: center;
+}
+
+/*Juego de las cañas*/
+
+#game-container #straws-game{
     display:none;
 }
-#gameContainer .close-hand{
+#game-container .close-hand{
     position: absolute;
     width: 74%;
     left:0;
 }
-#gameContainer #close-hand-front{
+#game-container #close-hand-front{
     z-index: 7;
     bottom: -12%;
 }
-#gameContainer #close-hand-back{
+#game-container #close-hand-back{
     z-index: 5;
     bottom: 0.9%;
 }
-#gameContainer .open-hand{
+#game-container .open-hand{
     left: 0;
     position: absolute;
     width: 104%;
 }
-#gameContainer #open-hand-front {
+#game-container #open-hand-front {
     bottom: -38%;;
     width: 104%;
     z-index: 7;
 }
-#gameContainer #open-hand-back {
-    bottom: -9%;
+#game-container #open-hand-back {
+    bottom: -8.6%;
     z-index: 6;
 }
-#gameContainer .stick{
+#game-container .straw{
     top: 8%;
     left: 50%;
     height: 70%;
@@ -112,60 +137,79 @@ header, footer{
     margin-top: 1%;
     z-index: 6;
 }
-#gameContainer .screen{
-    width: 100%; 
-    height: 100%; 
+#game-container .straws-helper-arrow{
+    left: 2%;
     position: absolute;
-    text-align: center;
+    top: 1%;
+    width: 48%;
 }
-#gameContainer #main-screen-game-sticks{
-    background-image: url("https://upload.wikimedia.org/wikipedia/commons/1/18/Sushi_bar_table.jpg");
+#game-container #straws-helper-text{
+    left: 6%;
+    position: absolute;
+    top: 1%;
+    width: 48%;
+}
+#game-container #main-screen-game-straws{
+    background-image: url("/images/largest-straw/straws-background.jpg");
     background-size: 100%;
     z-index: 8;
 }
-#gameContainer #main-screen-game-cards{
+
+/*Juego de las cartas*/
+
+#game-container #main-screen-cards-game{
     background-color: rgb(117, 117, 219);
-    z-index: 8;
-}
-#gameContainer #main-screen-game-boxes{
-    background-color: rgb(117, 117, 219);
+      background-image: url("/images/cards/cards-background.jpg");
+    background-position: center bottom;
+    background-size: 100% auto;
     z-index: 8;
 }
 
-#gameContainer #sticks-instructions-screen > div,#gameContainer #cards-instructions-screen > div,#gameContainer #boxes-instructions-screen > div{
+
+#game-container #straws-instructions-screen > div,#game-container #cards-instructions-screen > div,#game-container #boxes-instructions-screen > div{
     color: #fff; margin-top: 19%;
 }
-#gameContainer .menu-screen{
+#game-container .menu-screen{
     z-index: 9;
     background-color:rgba(0, 50, 69,0.95);
     border: 1px solid black;
 }
-#gameContainer .stick:hover, #gameContainer .stick.selected{
+#game-container .straw:hover, #game-container .straw.selected{
     width: 3.5%;
     cursor: pointer;
-    margin-left: 0.5%;
+    margin-left: 0.75%;
     margin-top: 0%;
     opacity: 0.8;
 }
-#gameContainer .stick.selected:hover{
+#game-container .straw.selected{
+    opacity: 1;
+}
+#game-container .straw.no-selected{
+    cursor: default;
+    margin-top: 1%;
+    opacity: 0.7;
+    width: 3%;
+    margin-left: 1%;
+}
+#game-container .straw.selected:hover{
     cursor: default;
 }
-#gameContainer .stick.no-selected:hover{
-    width: 2.5%;
+#game-container .straw.no-selected:hover{
+    width: 3%;
     cursor: default;
-    opacity:1;
+    opacity:0.7;
 }
-#gameContainer .screen-msg{
+#game-container .screen-msg{
     font-size: 22px;
 }
-#gameContainer .h2-title{
+#game-container .h2-title{
     font-size: 40px;
 }
 @media (max-width: 1200px){
-    #gameContainer .screen-msg{
+    #game-container .screen-msg{
         font-size: 16px;
     }
-    #gameContainer .h2-title{
+    #game-container .h2-title{
         font-size: 30px;
     }
 }
@@ -188,12 +232,16 @@ header, footer{
 
 #cards-game .red-card{
     background-color: #d63232;
+    background-image: url("/images/cards/red-card-background.jpg");
     border: 2px solid #fff;
+    background-size: 100% auto;
 }
 
 #cards-game .black-card{
     background-color: #222;
     border: 2px solid #fff;
+    background-image: url("/images/cards/black-card-background.jpg");
+   background-size: 100% auto;
 }
 
 #cards-game .cards-play-button{
@@ -204,7 +252,7 @@ header, footer{
     width: 15%;
 }
 
-#gameContainer .card-container {
+#game-container .card-container {
     width: 18%;
     height: 45%;
     position: absolute;
@@ -215,7 +263,8 @@ header, footer{
     float: left;
     cursor: pointer;
 }
-#gameContainer .card {
+
+#game-container .card {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -229,7 +278,7 @@ header, footer{
     transform-style: preserve-3d;
     -webkit-transform-origin: 50% 50%;
 }
-#gameContainer .card div {
+#game-container .card div {
     display: block;
     height: 100%;
     width: 100%;
@@ -244,76 +293,69 @@ header, footer{
     -o-backface-visibility: hidden;
     backface-visibility: hidden;
 }
-#gameContainer .card .back {
+#game-container .card .back {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
-#gameContainer .card:hover {
+#game-container .card:hover {
     -webkit-transform: rotateY(30deg);
     -moz-transform: rotateY(30deg);
     -o-transform: rotateY(30deg);
     transform: rotateY(30deg);
 }
-#gameContainer #final-card-front, #gameContainer #final-card-back{
+#game-container #final-card-front, #game-container #final-card-back{
     cursor: default;
 }
-#gameContainer .smaller .card:hover {
+#game-container .smaller .card:hover {
     -webkit-transform: rotateY(0deg);
     -moz-transform: rotateY(0deg);
     -o-transform: rotateY(0deg);
     transform: rotateY(0deg);
 }
-#gameContainer .smaller .card.flipped:hover {
+#game-container .smaller .card.flipped:hover {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
-#gameContainer .flipped{
+#game-container .flipped{
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
-#gameContainer .flipped:hover {
+#game-container .flipped:hover {
     -webkit-transform: rotateY(150deg);
     -moz-transform: rotateY(150deg);
     -o-transform: rotateY(150deg);
     transform: rotateY(150deg);
 }
 
-#cards-game .smaller{
-    -webkit-transition: 2s;
-    -moz-transition: 2s;
-    -o-transition: 2s;
-    transition: 2s;
-    margin-top: 10%;
-    margin-left: 47% !important;
-}
 
 #cards-game #cards-hat {
-    left: 37%;
+    left: 36.5%;
     /*margin-top: 6%;*/
     margin-top: 45%;
     position: absolute;
     width: 25%;
     z-index: 3;
-    -webkit-transition: 2.5s;
+    /*-webkit-transition: 2.5s;
     -moz-transition: 2.5s;
     -o-transition: 2.5s;
-    transition: 2.5s;
+    transition: 2.5s;*/
 }
 
 #cards-game #final-card {
     border-radius: 10px;
     display: none;
     height: 17%;
-    margin-left: 47% !important;
+    margin-left: 46% !important;
     position: absolute;
     width: 7%;
+    top: 40%;
 }
 
 #cards-game .card-to-choose{
@@ -343,6 +385,12 @@ header, footer{
     text-align: center;
     top: 50%;
     vertical-align: middle;
+}
+
+/*Cajas*/
+#game-container #main-screen-game-boxes{
+    background-color: rgb(117, 117, 219);
+    z-index: 8;
 }
 
 #boxes-game .box{
