--- a/style.css
+++ b/style.css
@@ -41,6 +41,14 @@ header, footer{
     height: 90%; 
     border: 1px solid #000;
 }
+#toggle-sound{
+    cursor: pointer;
+    left: 1%;
+    position: absolute;
+    top: 1%;
+    width: 5%;
+    z-index: 11;
+}
 #game-container #login-menu{
     z-index: 10;
     background-color:rgb(0, 50, 69);
@@ -159,7 +167,7 @@ header, footer{
 
 #game-container #main-screen-cards-game{
     background-color: rgb(117, 117, 219);
-      background-image: url("/images/cards/cards-background.jpg");
+    background-image: url("/images/cards/cards-background.jpg");
     background-position: center bottom;
     background-size: 100% auto;
     z-index: 8;
@@ -241,7 +249,7 @@ header, footer{
     background-color: #222;
     border: 2px solid #fff;
     background-image: url("/images/cards/black-card-background.jpg");
-   background-size: 100% auto;
+    background-size: 100% auto;
 }
 
 #cards-game .cards-play-button{
@@ -338,7 +346,7 @@ header, footer{
 #cards-game #cards-hat {
     left: 36.5%;
     /*margin-top: 6%;*/
-    margin-top: 45%;
+    top: 100%;
     position: absolute;
     width: 25%;
     z-index: 3;
@@ -348,6 +356,12 @@ header, footer{
     transition: 2.5s;*/
 }
 
+#cards-game #cards-hat.fast-transition {
+    -webkit-transition: 0.4s;
+    -moz-transition: 0.4s;
+    -o-transition: 0.4s;
+    transition: 0.4s;
+}
 #cards-game #final-card {
     border-radius: 10px;
     display: none;
@@ -367,11 +381,6 @@ header, footer{
     position: absolute;
     width: 19%;
     cursor: pointer;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-    opacity: 0;
 }
 
 #cards-game .card-to-choose#card-to-choose-right{
